[gd_scene load_steps=72 format=2]

[ext_resource path="res://SceneScripts/Bomb.gd" type="Script" id=1]
[ext_resource path="res://Assets/explosion 3.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Bomb_Sprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://ShaderMaterial/Explosion.tres" type="Material" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 190.129

[sub_resource type="Animation" id=2]
resource_name = "Shockwave"
length = 2.341
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/force")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.591, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1.93187, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2048, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2560, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3072, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3584, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1024, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1536, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2048, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2560, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3072, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3584, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1024, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1536, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2048, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2560, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3072, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3584, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1024, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1536, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2048, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2560, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3072, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3584, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1024, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1536, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2048, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2560, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3072, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3584, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 2560, 512, 512 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 2560, 512, 512 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1024, 2560, 512, 512 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1536, 2560, 512, 512 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2048, 2560, 512, 512 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2560, 2560, 512, 512 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3072, 2560, 512, 512 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3584, 2560, 512, 512 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1024, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1536, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2048, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2560, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3072, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3584, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1024, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1536, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2048, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2560, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3072, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3584, 3584, 512, 512 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": false,
"name": "explode",
"speed": 60.0
} ]

[node name="Bomb" type="Node2D"]
script = ExtResource( 1 )

[node name="Bomb" parent="." instance=ExtResource( 3 )]
position = Vector2( -4.76837e-07, -1.19209e-07 )

[node name="BombRadius_Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="BombRadius_collision" type="CollisionShape2D" parent="BombRadius_Area2D"]
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
material = ExtResource( 4 )
anchor_right = 1.6875
anchor_bottom = 1.7
color = Color( 0.639216, 0.129412, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
playback_speed = 5.0
anims/Shockwave = SubResource( 2 )

[node name="ExplosionAnimation" type="AnimatedSprite" parent="."]
position = Vector2( -2.12501, 1.87499 )
scale = Vector2( 0.734863, 0.734863 )
frames = SubResource( 10 )
animation = "explode"

[node name="ExplosionAnimation2" type="AnimatedSprite" parent="."]
position = Vector2( -3.6866, 3.25285 )
scale = Vector2( 0.540024, 0.540024 )
frames = SubResource( 10 )
animation = "explode"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
